# chatapp

./: cliff.toml  deny.toml  index.html  package.json
src/: App.vue  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  utils.rs
src-tauri/src/commands/: mod.rs
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/store/: index.js
src/views/: Login.vue  Register.vue
